apps/observability/values/grafana/templates/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - victor.internal
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /grafana/
#      rewrite:
#        uri: "/login"
      route:
        - destination:
            host: grafana-grafana-operator-grafana-service
            port:
              number: 3000
